updated at: 2020-01-17 22:55, ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - プロメ亭 - BOOTH

--- a/VRChat/41/1198541.html
+++ b/VRChat/41/1198541.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ミリタリーワンピースセット【VRoid用衣装】 - プロメ亭 - BOOTH
+      ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - プロメ亭 - BOOTH
     </title>
     <meta name="description" content=
-    "・バーチャルマーケット3出展衣装 このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
+    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1198541">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "ミリタリーワンピースセット【VRoid用衣装】 - プロメ亭 - BOOTH">
+    "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - プロメ亭 - BOOTH">
     <meta name="twitter:description" content=
-    "・バーチャルマーケット3出展衣装 このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
+    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/5f27f616-01d1-41c7-8e79-0d4f7a73b636_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bd749b13-e4db-4861-a1e2-1ff862a67f4d_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "ミリタリーワンピースセット【VRoid用衣装】 - プロメ亭 - BOOTH">
+    "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - プロメ亭 - BOOTH">
     <meta property="og:description" content=
-    "・バーチャルマーケット3出展衣装 このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
+    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/5f27f616-01d1-41c7-8e79-0d4f7a73b636_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bd749b13-e4db-4861-a1e2-1ff862a67f4d_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1198541">
     <meta name="ga:shop" content="UA-133290667-1">
@@ -132,7 +132,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          ミリタリーワンピースセット【VRoid用衣装】
+                          ミリタリーワンピースセット【VRoid用（ FBXモデル付）】
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -163,7 +163,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      ミリタリーワンピ有料版（3種類の服と飾緒と記章が付属します）
+                                      ミリタリーワンピ有料版
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -244,7 +244,7 @@
                                     "btn add-cart full-length"
                                     title="military_dress_f.zip"
                                     href=
-                                    "https://booth.pm/downloadables/757339">
+                                    "https://booth.pm/downloadables/871879">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -259,7 +259,7 @@
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(1.33 MB)
+                                        &nbsp;(1.87 MB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -276,7 +276,7 @@
                           "https://booth.pm/ja/items/1198541"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "ミリタリーワンピースセット【VRoid用衣装】 | プロメ亭"
+                          "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 | プロメ亭"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -295,73 +295,61 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ミリタリーワンピースセット【VRoid用衣装】"
+                            <img alt=
+                            "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】"
                             class="market-item-detail-item-image"
                             src=
-                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/5f27f616-01d1-41c7-8e79-0d4f7a73b636_base_resized.jpg">
+                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bd749b13-e4db-4861-a1e2-1ff862a67f4d_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ミリタリーワンピースセット【VRoid用衣装】"
+                            <img alt=
+                            "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bdf11b5e-768b-4737-83c5-894541d03bc8_base_resized.jpg">
+                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/00a0c5d9-5973-4c34-a9e3-a849bf1d8f07_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ミリタリーワンピースセット【VRoid用衣装】"
+                            <img alt=
+                            "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/3012c34b-fde8-4e10-8b57-3b150dc4e5c8_base_resized.jpg">
+                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/c488bb2e-39ed-433c-aaad-b8025e1d2b75_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ミリタリーワンピースセット【VRoid用衣装】"
+                            <img alt=
+                            "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/4571f11d-7dca-4049-9a13-ca7d0eda044e_base_resized.jpg">
+                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/3fc7be05-46f6-4595-8bce-c626b278492b_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ミリタリーワンピースセット【VRoid用衣装】"
+                            <img alt=
+                            "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/389e9f83-e57e-4238-9ecd-9eea7a17268d_base_resized.jpg">
+                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bfacc15e-fd42-4b82-a938-ca389908954e_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="ミリタリーワンピースセット【VRoid用衣装】"
+                            <img alt=
+                            "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/d2dc214f-9871-4c5d-b15f-abbca4f7eda8_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="ミリタリーワンピースセット【VRoid用衣装】"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/011b901a-72d1-4125-af0a-99c6dfe23704_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="ミリタリーワンピースセット【VRoid用衣装】"
-                            class="market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/2776c477-0af4-42ad-8fd6-41202cc4be43_base_resized.jpg">
+                            "https://booth.pximg.net/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/3e8864b1-41da-4b4f-9088-cb2d6b4ca493_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -369,42 +357,34 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/5f27f616-01d1-41c7-8e79-0d4f7a73b636_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bd749b13-e4db-4861-a1e2-1ff862a67f4d_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bdf11b5e-768b-4737-83c5-894541d03bc8_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/00a0c5d9-5973-4c34-a9e3-a849bf1d8f07_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/3012c34b-fde8-4e10-8b57-3b150dc4e5c8_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/c488bb2e-39ed-433c-aaad-b8025e1d2b75_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/4571f11d-7dca-4049-9a13-ca7d0eda044e_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/3fc7be05-46f6-4595-8bce-c626b278492b_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/389e9f83-e57e-4238-9ecd-9eea7a17268d_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bfacc15e-fd42-4b82-a938-ca389908954e_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/d2dc214f-9871-4c5d-b15f-abbca4f7eda8_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/011b901a-72d1-4125-af0a-99c6dfe23704_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/2776c477-0af4-42ad-8fd6-41202cc4be43_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/3e8864b1-41da-4b4f-9088-cb2d6b4ca493_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            ・バーチャルマーケット3出展衣装
+                            ・バーチャルマーケット3出展衣装（vket4にも出展予定）
                             このデータは軍服の正装をイメージしたVRoid
                             Studio用のミリタリーワンピースのテクスチャです。
                             （セシル変身アプリでも利用可能）
@@ -450,6 +430,16 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 軍服
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href="https://booth.pm/ja/search/FBX">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                FBX
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
