--- a/VRChat/45/1356545.html
+++ b/VRChat/45/1356545.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/37301c7a-40ea-4639-a455-c5e6e35d3d3b/i/1356545/a7a8664b-cdd2-45ca-a9e1-0d4c57d6ac64_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1356545">
+    <meta name="ga:shop" content="UA-156452272-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
