updated at: 2020-01-18 04:10, 【ｽｷﾆﾝｸﾞ済衣装】スウェット - 紅雨の降る蒼 - BOOTH

--- a/VRChat/54/1334654.html
+++ b/VRChat/54/1334654.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/37301c7a-40ea-4639-a455-c5e6e35d3d3b/i/1334654/f2bc041b-7345-4079-88f1-74e4fb1200f4_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1334654">
+    <meta name="ga:shop" content="UA-156452272-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
