updated at: 2020-01-18 15:29, 【¥0】 VRM Converter for VRChat - ぽけもり BOOTH支部 - BOOTH

--- a/VRChat/26/1025226.html
+++ b/VRChat/26/1025226.html
@@ -377,10 +377,8 @@
                             SDK
                             をインポートしておいてください。揺れ物の変換を行う場合は、Dynamic
                             Boneアセットを購入する必要があります。 Unity 2017.4.28f1
-                            https://download.unity3d.com/download_unity/e3a0f7dd2097/UnityDownloadAssistant-2017.4.28f1.exe
-                            ※Unity Hubを利用 (推奨) している場合は、上記URLの代わりに
                             unityhub://2017.4.28f1/e3a0f7dd2097
-                            をコピペして開く VRChat SDK (VRCSDK)
+                            VRChat SDK (VRCSDK)
                             https://vrchat.com/download/sdk Dynamic
                             Boneアセット
                             https://assetstore.unity.com/packages/tools/16743
