updated at: 2020-01-18 21:25, 【オリジナル3Dモデル】asha-エシヤ 2.0 - 仮想VoidCat - BOOTH

--- a/VRChat/60/1240960.html
+++ b/VRChat/60/1240960.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRChat想定3Dモデル】asha-エシヤ - 仮想VoidCat - BOOTH
+      【オリジナル3Dモデル】asha-エシヤ 2.0 - 仮想VoidCat - BOOTH
     </title>
     <meta name="description" content=
     "オリジナル3Dモデル『エシヤ』です 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
@@ -13,18 +13,18 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRChat想定3Dモデル】asha-エシヤ - 仮想VoidCat - BOOTH">
+    "【オリジナル3Dモデル】asha-エシヤ 2.0 - 仮想VoidCat - BOOTH">
     <meta name="twitter:description" content=
     "オリジナル3Dモデル『エシヤ』です 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/614fd3ca-eb00-430a-ad6b-72a85c508f55_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRChat想定3Dモデル】asha-エシヤ - 仮想VoidCat - BOOTH">
+    "【オリジナル3Dモデル】asha-エシヤ 2.0 - 仮想VoidCat - BOOTH">
     <meta property="og:description" content=
     "オリジナル3Dモデル『エシヤ』です 質問や問題あれば Twitter:@yueou E-mail：yueou.xu@gmail.com VRCID：Yueou へ連絡してください">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/614fd3ca-eb00-430a-ad6b-72a85c508f55_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1240960">
     <meta name="ga:shop" content="UA-131333751-1">
@@ -132,7 +132,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【VRChat想定3Dモデル】asha-エシヤ
+                          【オリジナル3Dモデル】asha-エシヤ 2.0
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -289,7 +289,7 @@
                           "https://booth.pm/ja/items/1240960"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRChat想定3Dモデル】asha-エシヤ | 仮想VoidCat"
+                          "【オリジナル3Dモデル】asha-エシヤ 2.0 | 仮想VoidCat"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -308,28 +308,37 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRChat想定3Dモデル】asha-エシヤ"
+                            <img alt="【オリジナル3Dモデル】asha-エシヤ 2.0"
                             class="market-item-detail-item-image"
                             src=
-                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/614fd3ca-eb00-430a-ad6b-72a85c508f55_base_resized.jpg">
+                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRChat想定3Dモデル】asha-エシヤ"
+                            <img alt="【オリジナル3Dモデル】asha-エシヤ 2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/8ae49019-b1c9-442b-bb91-88b07ff165ee_base_resized.jpg">
+                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/d11880d3-8f47-46b8-b61f-ab0b23a332a8_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRChat想定3Dモデル】asha-エシヤ"
+                            <img alt="【オリジナル3Dモデル】asha-エシヤ 2.0"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/060ed65c-0bf0-4d9a-9f7a-185ac40dcc1f_base_resized.jpg">
+                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/5ce5e9e8-7949-4e6a-8c28-e09517361bf6_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="【オリジナル3Dモデル】asha-エシヤ 2.0"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/b2681789-eeb2-4ec6-869e-fc0d710cef80_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -337,15 +346,19 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/614fd3ca-eb00-430a-ad6b-72a85c508f55_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/014646a5-779b-4ce1-a4e4-1634e92a56f6_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/8ae49019-b1c9-442b-bb91-88b07ff165ee_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/d11880d3-8f47-46b8-b61f-ab0b23a332a8_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/060ed65c-0bf0-4d9a-9f7a-185ac40dcc1f_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/5ce5e9e8-7949-4e6a-8c28-e09517361bf6_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1240960/b2681789-eeb2-4ec6-869e-fc0d710cef80_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
