updated at: 2020-01-18 21:39, fbxモデル ｢Romero77 Talon｣ - Store*Snowlight - BOOTH

--- a/VRChat/58/1232558.html
+++ b/VRChat/58/1232558.html
@@ -177,9 +177,9 @@
                                     <a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "_StoreSnowlight_Romero77Talon.zip"
+                                    "_StoreSnowlight_Romero77Talon_v1.0.zip"
                                     href=
-                                    "https://booth.pm/downloadables/505445">
+                                    "https://booth.pm/downloadables/872170">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -188,13 +188,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        _StoreSnowlight_Romero77Talon
+                                        _StoreSnowlight_Romero77Talon_v1.0
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(85.1 MB)
+                                        &nbsp;(32.2 MB)
                                       </div>
                                     </div></a>
                                   </div>
