updated at: 2020-01-18 22:42, ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - プロメ亭 - BOOTH

--- a/VRChat/41/1198541.html
+++ b/VRChat/41/1198541.html
@@ -6,7 +6,7 @@
       ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - プロメ亭 - BOOTH
     </title>
     <meta name="description" content=
-    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
+    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 セシル変身はもちろん、ワンピースのFBX入りなのでVRoidじゃなくても着用可能（改変はお任せします）">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1198541">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - プロメ亭 - BOOTH">
     <meta name="twitter:description" content=
-    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
+    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 セシル変身はもちろん、ワンピースのFBX入りなのでVRoidじゃなくても着用可能（改変はお任せします）">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bd749b13-e4db-4861-a1e2-1ff862a67f4d_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "ミリタリーワンピースセット【VRoid用（ FBXモデル付）】 - プロメ亭 - BOOTH">
     <meta property="og:description" content=
-    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 （セシル変身アプリでも利用可能）">
+    "・バーチャルマーケット3出展衣装（vket4にも出展予定） このデータは軍服の正装をイメージしたVRoid Studio用のミリタリーワンピースのテクスチャです。 セシル変身はもちろん、ワンピースのFBX入りなのでVRoidじゃなくても着用可能（改変はお任せします）">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/8646e4ca-61b7-453d-88a5-dc39305d61ba/i/1198541/bd749b13-e4db-4861-a1e2-1ff862a67f4d_base_resized.jpg">
     <meta property="og:url" content=
@@ -387,7 +387,7 @@
                             ・バーチャルマーケット3出展衣装（vket4にも出展予定）
                             このデータは軍服の正装をイメージしたVRoid
                             Studio用のミリタリーワンピースのテクスチャです。
-                            （セシル変身アプリでも利用可能）
+                            セシル変身はもちろん、ワンピースのFBX入りなのでVRoidじゃなくても着用可能（改変はお任せします）
                           </p>
                         </div>
                       </section>
