updated at: 2020-01-19 19:11, 義足01 - Variety Shop Rival - BOOTH

--- a/VRChat/53/1321253.html
+++ b/VRChat/53/1321253.html
@@ -6,7 +6,7 @@
       義足01 - Variety Shop Rival - BOOTH
     </title>
     <meta name="description" content=
-    "義足ですスキニング済みです ポリゴン数　6022(片足のみ) 　 　利用規約 本モデルを購入した時点で本利用規約に同意したとみなします 利用規約の内容は変更する場合があり、最新のものが適用されます 本モデルの使用によって生じた何らかのトラブル、損失について 製作者は一切の責任を負わないものとします 　本モデル、改造モデル著作権は製作者に帰属するものとします 　以下の行為を禁止します ・本モデルの権利者や作者を偽る行為 ・本モデルの二次配布 ・アバターペダステルによる配布 　（本モデルを流用したものも含む） ・publicアバターとしてのアバターアップロード ・公序良俗に反する行為">
+    "義足ですスキニング済みです ポリゴン数　6022(片足のみ) 　 　利用規約 本モデルを購入した時点で本利用規約に同意したとみなします 利用規約の内容は変更する場合があり、最新のものが適用されます 本モデルの使用によって生じた何らかのトラブル、損失について 製作者は一切の責任を負わないものとします 　本モデル、改造モデル著作権は製作者に帰属するものとします 　以下の行為を禁止します ・本モデルの権利者や作者を偽る行為 ・本モデルの二次配布 ・アバターペデステルによる配布 　（本モデルを流用したものも含む） ・publicアバターとしてのアバターアップロード ・公序良俗に反する行為">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1321253">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "義足01 - Variety Shop Rival - BOOTH">
     <meta name="twitter:description" content=
-    "義足ですスキニング済みです ポリゴン数　6022(片足のみ) 　 　利用規約 本モデルを購入した時点で本利用規約に同意したとみなします 利用規約の内容は変更する場合があり、最新のものが適用されます 本モデルの使用によって生じた何らかのトラブル、損失について 製作者は一切の責任を負わないものとします 　本モデル、改造モデル著作権は製作者に帰属するものとします 　以下の行為を禁止します ・本モデルの権利者や作者を偽る行為 ・本モデルの二次配布 ・アバターペダステルによる配布 　（本モデルを流用したものも含む） ・publicアバターとしてのアバターアップロード ・公序良俗に反する行為">
+    "義足ですスキニング済みです ポリゴン数　6022(片足のみ) 　 　利用規約 本モデルを購入した時点で本利用規約に同意したとみなします 利用規約の内容は変更する場合があり、最新のものが適用されます 本モデルの使用によって生じた何らかのトラブル、損失について 製作者は一切の責任を負わないものとします 　本モデル、改造モデル著作権は製作者に帰属するものとします 　以下の行為を禁止します ・本モデルの権利者や作者を偽る行為 ・本モデルの二次配布 ・アバターペデステルによる配布 　（本モデルを流用したものも含む） ・publicアバターとしてのアバターアップロード ・公序良俗に反する行為">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/2a4fe492-75d7-49e8-9963-f5be14147ed7/i/1321253/bafbc7d6-3d67-4b2b-88d9-984677d8d733_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "義足01 - Variety Shop Rival - BOOTH">
     <meta property="og:description" content=
-    "義足ですスキニング済みです ポリゴン数　6022(片足のみ) 　 　利用規約 本モデルを購入した時点で本利用規約に同意したとみなします 利用規約の内容は変更する場合があり、最新のものが適用されます 本モデルの使用によって生じた何らかのトラブル、損失について 製作者は一切の責任を負わないものとします 　本モデル、改造モデル著作権は製作者に帰属するものとします 　以下の行為を禁止します ・本モデルの権利者や作者を偽る行為 ・本モデルの二次配布 ・アバターペダステルによる配布 　（本モデルを流用したものも含む） ・publicアバターとしてのアバターアップロード ・公序良俗に反する行為">
+    "義足ですスキニング済みです ポリゴン数　6022(片足のみ) 　 　利用規約 本モデルを購入した時点で本利用規約に同意したとみなします 利用規約の内容は変更する場合があり、最新のものが適用されます 本モデルの使用によって生じた何らかのトラブル、損失について 製作者は一切の責任を負わないものとします 　本モデル、改造モデル著作権は製作者に帰属するものとします 　以下の行為を禁止します ・本モデルの権利者や作者を偽る行為 ・本モデルの二次配布 ・アバターペデステルによる配布 　（本モデルを流用したものも含む） ・publicアバターとしてのアバターアップロード ・公序良俗に反する行為">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/2a4fe492-75d7-49e8-9963-f5be14147ed7/i/1321253/bafbc7d6-3d67-4b2b-88d9-984677d8d733_base_resized.jpg">
     <meta property="og:url" content=
@@ -268,7 +268,7 @@
                             製作者は一切の責任を負わないものとします
                             　本モデル、改造モデル著作権は製作者に帰属するものとします
                             　以下の行為を禁止します ・本モデルの権利者や作者を偽る行為
-                            ・本モデルの二次配布 ・アバターペダステルによる配布
+                            ・本モデルの二次配布 ・アバターペデステルによる配布
                             　（本モデルを流用したものも含む）
                             ・publicアバターとしてのアバターアップロード ・公序良俗に反する行為
                             ・政治、宗教活動、他者に対する誹謗中傷目的での使用 　 　許可行為の例
