updated at: 2020-01-19 21:54, ３Dモデル「悪魔・紅角族」 - 紅玉堂 - BOOTH

--- a/VRChat/00/1257900.html
+++ b/VRChat/00/1257900.html
@@ -6,7 +6,7 @@
       ３Dモデル「悪魔・紅角族」 - 紅玉堂 - BOOTH
     </title>
     <meta name="description" content=
-    "VRChat向けに制作された３Dモデル「悪魔・紅角族」です。 フルボディトラッキングでの動作は確認済み、アイトラッキングシステムの対応はしておりませんがまばたきアニメーションが同梱されています。 DLされたzipを解凍すると「texture」、「VRCAvatarModel_428chan.unitypackage」、「readme」、「koukakuzoku.blender」が同梱されています。 テクスチャ枚数：７枚 マテリアル数：４ FBX：７（内６個がプリセット用に統合されたものです） FBXデータはUnity側でサイズを0.9ほどにしております。">
+    "VRChat向けに制作された３Dモデル「悪魔・紅角族」です。 フルボディトラッキングでの動作は確認済み、アイトラッキングシステムの対応はしておりませんがまばたきアニメーションが同梱されています。 DLされたzipを解凍すると「texture」、「VRCAvatarModel_koukakuzoku.unitypackage」、「readme」、「koukakuzoku.blender」が同梱されています。 テクスチャ枚数：７枚 マテリアル数：４ FBX：７（内６個がプリセット用に統合されたものです） FBXデータはUnity側でサイズを0.9ほどにしております。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1257900">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "３Dモデル「悪魔・紅角族」 - 紅玉堂 - BOOTH">
     <meta name="twitter:description" content=
-    "VRChat向けに制作された３Dモデル「悪魔・紅角族」です。 フルボディトラッキングでの動作は確認済み、アイトラッキングシステムの対応はしておりませんがまばたきアニメーションが同梱されています。 DLされたzipを解凍すると「texture」、「VRCAvatarModel_428chan.unitypackage」、「readme」、「koukakuzoku.blender」が同梱されています。 テクスチャ枚数：７枚 マテリアル数：４ FBX：７（内６個がプリセット用に統合されたものです） FBXデータはUnity側でサイズを0.9ほどにしております。">
+    "VRChat向けに制作された３Dモデル「悪魔・紅角族」です。 フルボディトラッキングでの動作は確認済み、アイトラッキングシステムの対応はしておりませんがまばたきアニメーションが同梱されています。 DLされたzipを解凍すると「texture」、「VRCAvatarModel_koukakuzoku.unitypackage」、「readme」、「koukakuzoku.blender」が同梱されています。 テクスチャ枚数：７枚 マテリアル数：４ FBX：７（内６個がプリセット用に統合されたものです） FBXデータはUnity側でサイズを0.9ほどにしております。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/eac26deb-f8eb-4293-8010-904b0d088bf4/i/1257900/f2095c50-aa68-4d55-89a1-7d40593a3927_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "３Dモデル「悪魔・紅角族」 - 紅玉堂 - BOOTH">
     <meta property="og:description" content=
-    "VRChat向けに制作された３Dモデル「悪魔・紅角族」です。 フルボディトラッキングでの動作は確認済み、アイトラッキングシステムの対応はしておりませんがまばたきアニメーションが同梱されています。 DLされたzipを解凍すると「texture」、「VRCAvatarModel_428chan.unitypackage」、「readme」、「koukakuzoku.blender」が同梱されています。 テクスチャ枚数：７枚 マテリアル数：４ FBX：７（内６個がプリセット用に統合されたものです） FBXデータはUnity側でサイズを0.9ほどにしております。">
+    "VRChat向けに制作された３Dモデル「悪魔・紅角族」です。 フルボディトラッキングでの動作は確認済み、アイトラッキングシステムの対応はしておりませんがまばたきアニメーションが同梱されています。 DLされたzipを解凍すると「texture」、「VRCAvatarModel_koukakuzoku.unitypackage」、「readme」、「koukakuzoku.blender」が同梱されています。 テクスチャ枚数：７枚 マテリアル数：４ FBX：７（内６個がプリセット用に統合されたものです） FBXデータはUnity側でサイズを0.9ほどにしております。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/eac26deb-f8eb-4293-8010-904b0d088bf4/i/1257900/f2095c50-aa68-4d55-89a1-7d40593a3927_base_resized.jpg">
     <meta property="og:url" content=
@@ -289,7 +289,7 @@
                           <p class="autolink u-text-wrap">
                             VRChat向けに制作された３Dモデル「悪魔・紅角族」です。
                             フルボディトラッキングでの動作は確認済み、アイトラッキングシステムの対応はしておりませんがまばたきアニメーションが同梱されています。
-                            DLされたzipを解凍すると「texture」、「VRCAvatarModel_428chan.unitypackage」、「readme」、「koukakuzoku.blender」が同梱されています。
+                            DLされたzipを解凍すると「texture」、「VRCAvatarModel_koukakuzoku.unitypackage」、「readme」、「koukakuzoku.blender」が同梱されています。
                             テクスチャ枚数：７枚 マテリアル数：４
                             FBX：７（内６個がプリセット用に統合されたものです）
                             FBXデータはUnity側でサイズを0.9ほどにしております。
