updated at: 2020-01-19 23:21, 【VRChatアバター向け】小さな騎士 - NEXT重工 - BOOTH

--- a/VRChat/97/1211097.html
+++ b/VRChat/97/1211097.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRChatアバター向け】小さな騎士 - nextnext - BOOTH
+      【VRChatアバター向け】小さな騎士 - NEXT重工 - BOOTH
     </title>
     <meta name="description" content=
     "かっこかわいい小さな騎士さんです。 VRChat向けの3Dモデルとなります。 身長は90cmくらい。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRChatアバター向け】小さな騎士 - nextnext - BOOTH">
+    "【VRChatアバター向け】小さな騎士 - NEXT重工 - BOOTH">
     <meta name="twitter:description" content=
     "かっこかわいい小さな騎士さんです。 VRChat向けの3Dモデルとなります。 身長は90cmくらい。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9c025fee-5386-455b-83aa-e5c41da85d84/i/1211097/d9a777b6-56dc-4009-8aa7-9cb3929fc2d1_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRChatアバター向け】小さな騎士 - nextnext - BOOTH">
+    "【VRChatアバター向け】小さな騎士 - NEXT重工 - BOOTH">
     <meta property="og:description" content=
     "かっこかわいい小さな騎士さんです。 VRChat向けの3Dモデルとなります。 身長は90cmくらい。">
     <meta property="og:image" content=
@@ -133,11 +133,11 @@
                           href="https://nextnext.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="nextnext" class=
+                            <img alt="NEXT重工" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/4533368/icon_image/0109e046-d738-4d22-ae17-9576e52d43da_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/4533368/icon_image/70d55eaa-0b02-422f-912d-2230dd4dafad_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              nextnext
+                              NEXT重工
                             </div>
                           </div></a>
                         </div>
@@ -235,8 +235,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1211097"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text=
-                          "【VRChatアバター向け】小さな騎士 | nextnext"
+                          data-text="【VRChatアバター向け】小さな騎士 | NEXT重工"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
